ingress/example-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # e.g. Cookie JSESSIONID=8e5IWiIo4u9m6BfXZcylXdqRXx3BQvykFlrewc_w.le-app-869f98dd87-t4hhf
    nginx.com/sticky-cookie-services: JSESSIONID
spec:
  # kubectl get ingressclass/nginx -o=jsonpath='{.metadata.name}'
  ingressClassName: nginx
  rules:
    - host: example-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app-http
                port:
                  number: 8080
